flat histories list
